dotCMS/core#11111 Fix dropdown arrow align for IE11

--- a/scss/dijit/form/_common.scss
+++ b/scss/dijit/form/_common.scss
@@ -68,8 +68,3 @@
     display: none;
   }
 }
-
-// IE fixes
-.dijitSelect .dijitArrowButtonContainer {
-  padding-top: ($field-height/2)-2;
-}
